--- a/index.html
+++ b/index.html
@@ -1,53 +1,83 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>HLS Player</title>
+<h1>My first HLS player</h1>
 
-<link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet" />
-<script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
+<video id="player" width="720" controls></video>
 
-<style>
-  body { font-family: Arial; text-align:center; padding:30px; }
-  button { margin:5px; padding:10px; }
-</style>
-</head>
-<body>
+<br><br>
 
-<video
-  id="player"
-  class="video-js vjs-default-skin"
-  width="720"
-  height="400"
-  controls
->
-  <source src="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8" type="application/x-mpegURL">
-</video>
+<button onclick="playVid()">Play</button>
+<button onclick="pauseVid()">Pause</button>
+<button onclick="stopVid()">Stop</button>
+<button onclick="forward()">Jump to 5 sec forward</button>
+<button onclick="back()">Jump to 5 sec backwards</button>
 
-<div>
-  <button onclick="playVid()">Play</button>
-  <button onclick="pauseVid()">Pause</button>
-  <button onclick="stopVid()">Stop</button>
-  <button onclick="forward()">+5 sec</button>
-  <button onclick="back()">-5 sec</button>
-</div>
+<p>Playlist</p>
+
+<input type="text" id="url1" size="100"
+value="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8">
+<button onclick="loadVideo('url1')">Load</button>
+<br><br>
+
+<input type="text" id="url2" size="100"
+value="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8">
+<button onclick="loadVideo('url2')">Load</button>
+
+<br><br>
+<button onclick="shuffle()">Shuffle</button>
+
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
 <script>
-const player = videojs('player');
+const video = document.getElementById("player");
+let hls;
 
-function playVid(){ player.play(); }
-function pauseVid(){ player.pause(); }
-function stopVid(){
-  player.pause();
-  player.currentTime(0);
+// ---------- PLAYER CONTROLS ----------
+function playVid(){ video.play(); }
+function pauseVid(){ video.pause(); }
+function stopVid(){ video.pause(); video.currentTime = 0; }
+function forward(){ video.currentTime += 5; }
+function back(){ video.currentTime -= 5; }
+
+// ---------- LOAD VIDEO ----------
+function loadVideo(inputId){
+    const url = document.getElementById(inputId).value;
+
+    if(Hls.isSupported()){
+        if(hls) hls.destroy();
+
+        hls = new Hls();
+        hls.loadSource(url);
+        hls.attachMedia(video);
+        hls.on(Hls.Events.MANIFEST_PARSED, function() {
+            video.play();
+        });
+    }
+    else if(video.canPlayType("application/vnd.apple.mpegurl")){
+        video.src = url;
+        video.play();
+    }
 }
-function forward(){
-  player.currentTime(player.currentTime()+5);
+
+function shuffle(){
+    const urls = [
+        document.getElementById("url1").value,
+        document.getElementById("url2").value
+    ];
+
+    const random = urls[Math.floor(Math.random()*urls.length)];
+
+    loadVideoFromShuffle(random);
 }
-function back(){
-  player.currentTime(player.currentTime()-5);
+
+function loadVideoFromShuffle(url){
+    if(Hls.isSupported()){
+        if(hls) hls.destroy();
+
+        hls = new Hls();
+        hls.loadSource(url);
+        hls.attachMedia(video);
+        hls.on(Hls.Events.MANIFEST_PARSED, function() {
+            video.play();
+        });
+    }
 }
 </script>
-
-</body>
-</html>
